2009-07-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/sigtimedwait.c: Restructure to improve coverage. Improve
	comments.

2009-07-03	Daniel Hellstrom <daniel@gaisler.com>

	* sapi/src/exinit.c, score/include/rtems/score/objectmp.h,
	score/src/objectmp.c: Ensure local node number is set early enough in
	MP configurations.

2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/coremsg.h, score/src/coremsgflushwait.c:
	Mark _CORE_message_queue_Flush_waiting_threads with
	FUNCTIONALITY_NOT_CURRENTLY_USED_BY_ANY_API since there is no way to
	reach it via an API.

2009-07-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/tod.h: Correct name of parameter.

2009-06-30	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/prwlocktimedrdlock.c: Restructure if slightly to make to
	make it easier to analyze for coverage.

2009-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/killinfo.c, posix/src/mutexinit.c, posix/src/psignal.c,
	posix/src/psignalchecksignal.c, posix/src/pthread.c,
	posix/src/pthreadexit.c, posix/src/pthreadinitthreads.c: Remove
	includes of <assert.h> where possible. Make other uses conditional on
	ifdef RTEMS_DEBUG.

2009-06-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am, posix/include/rtems/posix/priority.h,
	posix/include/rtems/posix/pthread.h,
	posix/inline/rtems/posix/priority.inl, posix/src/killinfo.c,
	posix/src/pthread.c, posix/src/pthreadcreate.c,
	posix/src/pthreadsetschedparam.c: Various modifications to improve
	binary code coverage analysis. Some of these are to mark code as
	debug only. Some are to break conditional expressions into multiple
	lines. Some are to move inline methods that are not time critical
	into subroutines to make them easier to test. Inlining them multiple
	times means that their logic paths are spread across multiple
	methods. This explodes the test cases required.